Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23862

Render mode, BufferedRender, not working for Qt3D Viewport

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.0.0
    • 5.0.0
    • Quick: SceneGraph
    • None

      It appears that a check for m_image.isNull() in QSGPainterNode::paint() is leading to blank Viewports in Qt3D QML.
      For a Viewport with its renderMode set to BufferedRender, it seems that a null m_image is expected behaviour.

      I've suggested a patch that makes this check more specific.

        1. QSGSceneNode_Paint.patch
          1 kB
          Christopher Ham (closed Nokia identity)
        For Gerrit Dashboard: QTBUG-23862
        # Subject Branch Project Status CR V

            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            chham Christopher Ham (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes