Fix for QTBUG-23862 - Blank screen in Viewport

This patch fixes an issue that causes Qt3D's Viewport to be blank
when its renderMode property is set to BufferedRender.
(QSGPainterNode's RenderTarget is set to FramebufferObject)
Task-number: QTBUG-23862
Change-Id: Ic7a333f79ecf1aa153ef42e213644a17243a3580
Reviewed-by: Sarah Jane Smith <sarah.j.smith@nokia.com>
Reviewed-by: Yoann Lopes <yoann.lopes@nokia.com>